; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/linux-jack/extr_jack-input.c_jack_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/linux-jack/extr_jack-input.c_jack_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jack_data = type { i32, %struct.jack_data* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @jack_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jack_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.jack_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.jack_data*
  store %struct.jack_data* %5, %struct.jack_data** %3, align 8
  %6 = load %struct.jack_data*, %struct.jack_data** %3, align 8
  %7 = icmp ne %struct.jack_data* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %27

9:                                                ; preds = %1
  %10 = load %struct.jack_data*, %struct.jack_data** %3, align 8
  %11 = call i32 @deactivate_jack(%struct.jack_data* %10)
  %12 = load %struct.jack_data*, %struct.jack_data** %3, align 8
  %13 = getelementptr inbounds %struct.jack_data, %struct.jack_data* %12, i32 0, i32 1
  %14 = load %struct.jack_data*, %struct.jack_data** %13, align 8
  %15 = icmp ne %struct.jack_data* %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %9
  %17 = load %struct.jack_data*, %struct.jack_data** %3, align 8
  %18 = getelementptr inbounds %struct.jack_data, %struct.jack_data* %17, i32 0, i32 1
  %19 = load %struct.jack_data*, %struct.jack_data** %18, align 8
  %20 = call i32 @bfree(%struct.jack_data* %19)
  br label %21

21:                                               ; preds = %16, %9
  %22 = load %struct.jack_data*, %struct.jack_data** %3, align 8
  %23 = getelementptr inbounds %struct.jack_data, %struct.jack_data* %22, i32 0, i32 0
  %24 = call i32 @pthread_mutex_destroy(i32* %23)
  %25 = load %struct.jack_data*, %struct.jack_data** %3, align 8
  %26 = call i32 @bfree(%struct.jack_data* %25)
  br label %27

27:                                               ; preds = %21, %8
  ret void
}

declare dso_local i32 @deactivate_jack(%struct.jack_data*) #1

declare dso_local i32 @bfree(%struct.jack_data*) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
